--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
+    android:id="@+id/coordinator_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -21,6 +22,7 @@
             app:expandedTitleMarginStart="24dp"
             app:expandedTitleMarginBottom="36dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
