--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,17 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/reveal_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/bg1"
+                android:orientation="vertical">
 
     <ImageView
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/mv_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
-
+    <TextView
+        android:id="@+id/mv_actor"
+        android:layout_marginTop="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_below="@+id/mv_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 
 </RelativeLayout>
