--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,10 +14,10 @@
         <item name="windowNoTitle">true</item>
     </style>
 
-    
+
     <style name="noAnimTheme" parent="AppTheme">
         <item name="android:windowAnimationStyle">@null</item>
-        <item name="android:windowBackground">@color/colorAccent</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:colorBackgroundCacheHint">@null</item>
         <item name="android:windowIsTranslucent">true</item>
     </style>
