--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,26 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
+                xmlns:tools="http://schemas.android.com/tools"
                 android:id="@+id/reveal_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/bg1"
+                android:background="@drawable/bg_detail"
                 android:orientation="vertical">
 
-    <ImageView
-        android:layout_marginTop="24dp"
-        android:layout_centerHorizontal="true"
+
+    <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/mv_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="48dp"
+        app:actualImageScaleType="fitXY"
+        app:viewAspectRatio="0.67"
+        />
 
     <TextView
-        android:id="@+id/mv_actor"
-        android:layout_marginTop="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_below="@+id/mv_image"
+        android:id="@+id/collect_count"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/mv_image"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:textColor="@color/textColor"
+        android:textSize="16sp"
+        tools:text="观影人数：11230"/>
+
+    <TextView
+        android:id="@+id/mv_summary"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/collect_count"
+        android:layout_centerHorizontal="true"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_marginTop="20dp"
+        android:lineSpacingExtra="2dp"
+        android:textColor="@color/textColor"
+        android:textSize="14sp"
+        />
 
 
 </RelativeLayout>
