--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -9,20 +9,30 @@
     android:background="@color/white"
     tools:context="net.december1900.douby.ui.MainActivity">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layoutManager="LinearLayoutManager"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:stackFromEnd="true"/>
+
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
+        android:clipToPadding="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
+
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsingToolbarLayout"
             android:layout_width="match_parent"
-            android:layout_height="240dp"
+            android:layout_height="wrap_content"
             app:expandedTitleMarginBottom="36dp"
             app:expandedTitleMarginStart="24dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
-
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -32,19 +42,19 @@
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
+            <com.facebook.drawee.view.SimpleDraweeView
+                android:id="@+id/bg_appbar"
+                android:layout_width="wrap_content"
+                android:layout_height="300dp"
+                android:background="?attr/colorPrimary"
+                android:scaleType="fitXY"
+                app:layout_collapseMode="parallax"
+                app:viewAspectRatio="1.5"
+                />
+
         </android.support.design.widget.CollapsingToolbarLayout>
 
     </android.support.design.widget.AppBarLayout>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/app_bar"
-        android:orientation="vertical"
-        app:layoutManager="LinearLayoutManager"
-        app:stackFromEnd="true"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
 
 </android.support.design.widget.CoordinatorLayout>
