--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,6 @@
     <dimen name="fab_margin">16dp</dimen>
 
     <dimen name="card_text_size">14sp</dimen>
+
+    <dimen name="toolbar_padding_top">0dp</dimen>
 </resources>
