--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#88F9E5</color>
-    <color name="colorPrimaryDark">#6BEFD7</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#141540</color>
+    <color name="colorAccent">#FB8B81</color>
 
+
+    <color name="background_color">#FDF8F4</color>
     <color name="white">#ffffff</color>
-    <color name="textColor">#212121</color>
+    <color name="textColor">#141540</color>
 </resources>
