--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,7 +6,8 @@
     <dimen name="nav_header_height">160dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
-    <dimen name="card_text_size">14sp</dimen>
-
+    <dimen name="card_text_title">16sp</dimen>
+    <dimen name="card_text_size">12sp</dimen>
+    <dimen name="movie_rating_size">28sp</dimen>
     <dimen name="toolbar_padding_top">0dp</dimen>
 </resources>
